--- a/src/index.css
+++ b/src/index.css
@@ -111,16 +111,15 @@ h3 {
 }
 
 .button-types {
-  background-color: #f6f6f6; /* Green */
   border: none;
-  color: rgb(45, 42, 42);
+  color: rgb(255, 188, 188);
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 12px;
-  margin: 2px 2px;
+  font-size: 18px;
   cursor: pointer;
+  border-radius: 35%;
 }
 
 
